test-configmap-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: test-configmap-webhook
webhooks:
- name: test-configmap-webhook.example.com
  clientConfig:
    service:
      name: insights-agent-test-insights-event-watcher
      namespace: insights-agent
      path: /mutate
      port: 8080
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["configmaps"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Fail
